2004-09-14  Tom Tromey  <tromey@redhat.com>

	* java/lang/reflect/natField.cc (getType): Use resolve_field.
	* java/lang/natVMClassLoader.cc (resolveClass): New native
	implementation.
	(linkClass0): Removed.
	(markClassErrorState0): Likewise.
	* java/lang/natClassLoader.cc: Include execution.h.  Moved class
	preparation code to resolve.cc.
	(_Jv_RegisterClassHookDefault): Set class's execution engine if
	not already set.
	(_Jv_FindClass): Use wait_for_state.
	(_Jv_NewArrayClass): Likewise.  Simplified permissions setting.
	* java/lang/natClass.cc (_Jv_IsInstanceOf): Include execution.h.
	Moved interface table and class preparation code to resolve.cc.
	(finalize): Rewrote.
	(initializeClass): Simplified locking and class preparation.
	* java/lang/VMClassLoader.java (linkClass0): Removed.
	(markClassErrorState0): Likewise.
	(resolveClass): Now native.
	(transformException): New method.
	* java/lang/Class.h (getSuperclass): Don't try to resolve super
	reference.
	(getInterface): Likewise.
	(size): Likewise.
	(set_state): New method.
	(Class): Updated friend declarations.
	(verify): Field now private.
	(engine): New field.
	* include/jvm.h (class _Jv_Resolver): New class declaration.
	(_Jv_ResolveField): Removed declaration.
	(_Jv_CheckAccessNoInit): Likewise.
	(_Jv_isBinaryCompatible): Removed.
	* include/java-interp.h (class _Jv_MethodBase): Updated friend
	declarations.
	(class _Jv_InterpMethod): Likewise.
	(class _Jv_InterpClass): Likewise.
	(class _Jv_JNIMethod): Likewise.
	* include/execution.h: New file.
	* gnu/gcj/runtime/natSharedLibLoader.cc: Include execution.h.
	(_Jv_sharedlib_register_hook): Set `engine' on loaded class.
	Register class after setting fields.
	* resolve.cc: Include execution.h, VerifyError.h.  Moved
	interpreter-specific code to interpret.cc.
	(uaddr): New location.
	(struct aligner): Likewise.
	(ALIGNOF): Likewise.
	(INITIAL_IOFFSETS_LEN): Interface dispatch code moved here.
	(INITIAL_IFACES_LEN): Likewise.
	(null_idt): Likewise.