@@ -1,6 +1,6 @@
 // field.h - Header file for fieldID instances.  -*- c++ -*-
 
-/* Copyright (C) 1998, 1999, 2000  Free Software Foundation
+/* Copyright (C) 1998, 1999, 2000, 2004  Free Software Foundation
 
    This file is part of libgcj.
 
@@ -21,9 +21,7 @@ details.  */
 
 struct _Jv_Field
 {
-#ifndef COMPACT_FIELDS
   struct _Jv_Utf8Const*	name;
-#endif
 
   /* The type of the field, if isResolved().
      If !isResolved():  The fields's signature as a (Utf8Const*). */
@@ -31,11 +29,7 @@ struct _Jv_Field
 
   _Jv_ushort		flags;
 
-#ifdef COMPACT_FIELDS
-  jshort		nameIndex;  /* offset in class's name table */
-#else
   _Jv_ushort		bsize;  /* not really needed ... */
-#endif
 
   union {
     jint		boffset;  /* offset in bytes for instance field */
@@ -82,12 +76,7 @@ struct _Jv_Field
     return flags & java::lang::reflect::Modifier::ALL_FLAGS;
   }
 
-#ifdef COMPACT_FIELDS
-  _Jv_Utf8Const * getNameUtf8Const (jclass cls)
-  { return clas->fieldNames + nameIndex; }
-#else
   _Jv_Utf8Const * getNameUtf8Const (jclass) { return name; }
-#endif
 #endif
 };
 
